# MediaDB

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierignore  README.md  biome.json  components.json  electron-builder.yml  eslint.config.mjs  index.html  next.config.js  nextron.config.js  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.github/workflows/: build.yml  main.yml  publish.yml
.husky/: pre-commit  pre-push
main/: background.ts
main/helpers/: create-window.ts
renderer/: .babelrc  next.config.js
renderer/components/BottomInfoBar/: index.tsx
renderer/components/Content/: content.tsx  index.tsx  showMenu.tsx  styles.tsx
renderer/components/Directory/: index.tsx
renderer/components/Filter/: index.tsx
renderer/components/FolderEdit/: index.tsx
renderer/components/Footer/: index.tsx
renderer/components/ImageLoader/: index.tsx
renderer/components/Layout/: drawer.tsx  index.tsx  sidePanel.tsx
renderer/components/MovieCard/: index.tsx
renderer/components/Notification/: index.tsx
renderer/components/SettingFolderList/: folderEdit.tsx  index.tsx
renderer/components/TVShowCard/: index.tsx
renderer/components/TVShowMenu/: index.tsx
renderer/components/modals/: editFolder.tsx  getDirectory.tsx  styles.tsx
renderer/lib/: store.ts  theme.ts
renderer/lib/electron/: index.ts
renderer/lib/parser/: aggregator.ts  comic.ts  index.ts  movie.ts  tvshow.ts
renderer/lib/store/: index.ts
renderer/pages/: _app.tsx  _document.tsx  home.tsx  setting.tsx
renderer/pages/folder/: [id].tsx
renderer/store/: index.ts
renderer/type/: index.ts
renderer/utils/: index.ts
renderer/utils/electron/: index.ts
renderer/utils/parser/: comic.ts  index.ts  movie.ts  tvshow.ts
renderer/utils/store/: index.ts
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  nfo_parser.rs  parser.rs  types.rs
src-tauri/src/db/: main.rs  mod.rs  queries.rs  types.rs
src-tauri/src/db/sql/: create_tables.sql  get_folder_content.sql  tags_in_folder.sql
src-tauri/src/helper/: main.rs
src-tauri/src/model/: database.rs  mod.rs  parser.rs
src-tauri/src/parser/: comic_parser.rs  main.rs  mod.rs  nfo_parser.rs  types.rs  utilities.rs
src-tauri/src/server/: mod.rs
src/__tests__/context/: helper.test.ts
src/__tests__/lib/: context-helper.test.ts  filter.test.ts
src/app/: layout.tsx  page.tsx
src/app/setting/: page.tsx
src/components/AppBar/: index.tsx
src/components/Content/: content.tsx  context.tsx  filter.tsx  footer.tsx  index.tsx  media.tsx  menu.tsx  showMenu.tsx  styles.tsx  toolbar.tsx
src/components/Error/: index.tsx
src/components/Filter/: index.tsx
src/components/Footer/: index.tsx
src/components/Header/: index.tsx
src/components/Icons/: index.tsx
src/components/ImageLoader/: common.tsx  cover.tsx  index.tsx  poster.tsx
src/components/Layout/: drawer.tsx  index.tsx
src/lib/: fuzzy.tsx  utils.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  setting.tsx
src/routes/: __root.tsx  index.tsx  setting.tsx
src/type/: index.ts
(+112 files in other folders)
