[package]
name = "mediadb"
version = "0.6.0"
description = "manager for movie and tv shows"
authors = ["zluo01"]
license = ""
repository = "https://github.com/zluo01/MediaDB"
edition = "2021"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.2", features = ["protocol-asset"] }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-single-instance = { version = "2.4.0" }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.6.0"
roxmltree = "0.21.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
log = "0.4.29"
rayon = "1.11"
zip = "7.3.0"
tauri-plugin-fs = { version = "2.4.5" }
urlencoding = "2.1.3"
portpicker = "0.1.1"
tiny_http = "0.12.0"
