[package]
name = "mediadb"
version = "0.6.0"
description = "manager for movie and tv shows"
authors = ["zluo01"]
license = ""
repository = "https://github.com/zluo01/MediaDB"
edition = "2021"
rust-version = "1.95.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-single-instance = { version = "2.4.2" }
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.7.1"
roxmltree = "0.21.1"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
log = "0.4.30"
rayon = "1.12"
zip = "8.6.0"
tauri-plugin-fs = { version = "2.5.1" }
urlencoding = "2.1.3"
portpicker = "0.1.1"
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["fs", "set-header"] }
tokio = { version = "1.52.3", features = ["net"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros"] }
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
